<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rg_rab_bar"/>

    <RadioGroup
        android:id="@+id/rg_rab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#fff"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <RadioButton
            android:id="@+id/rb_channel1"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_channel1_bg"
            android:text="@string/draw_line"/>
        <RadioButton
            android:id="@+id/rb_channel2"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_channel2_bg"
            android:text="@string/draw_circle"/>
        <RadioButton
            android:id="@+id/rb_channel3"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_channel3_bg"
            android:text="@string/draw_square"/>
        <RadioButton
            android:id="@+id/rb_channel4"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_channel4_bg"
            android:text="@string/draw_six_star"/>
        <RadioButton
            android:id="@+id/rb_channel5"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_channel5_bg"
            android:text="@string/draw_five_star"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>