<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <priv.zxy.drawgraphics.custom_view.PresenhamLine
        android:id="@+id/drawLine"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"/>

    <TextView
        android:id="@+id/getX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="30.0"
        app:layout_constraintStart_toEndOf="@+id/textX"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/y"
        app:layout_constraintStart_toEndOf="@+id/getX"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/getY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="30.0"
        app:layout_constraintStart_toEndOf="@+id/textY"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/drawLinePage"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/drawlinepage"
        android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>