<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请输入圆心坐标："
        android:paddingTop="5dp"/>

    <EditText
        android:id="@+id/inputX"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textView" />


    <EditText
        android:id="@+id/inputY"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="0"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/inputX" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/make_sure"
        android:background="@drawable/button"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputY"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/drawLinePage"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/drawcirclepage"
        android:textStyle="bold"/>

    <priv.zxy.drawgraphics.custom_view.DrawCircleView
        android:id="@+id/drawCirclePage"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/drawLinePage"
        app:layout_constraintTop_toBottomOf="@+id/inputX" />
    <TextView
        android:id="@+id/textX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/x"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage" />

    <TextView
        android:id="@+id/getX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="30.0"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/textX"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/y"
        app:layout_constraintStart_toEndOf="@+id/getX"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage"
        android:textColor="#fff"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/getY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="30.0"
        app:layout_constraintStart_toEndOf="@+id/textY"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage"
        android:textColor="#fff"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="28dp"
        android:text="@string/radius"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/getY"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage"/>
    <TextView
        android:id="@+id/radius_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/radius"
        app:layout_constraintTop_toTopOf="@+id/drawCirclePage"
        android:paddingLeft="20dp"/>
</android.support.constraint.ConstraintLayout>